refactor: reduce cyclomatic complexity of FormatConversionValidator::validate